modified a bunch of heights on buttons and containers on the recipe modal. Sub recipes/ingrediant recipes text now no longer overflows. Also on mobile landscape, modals no longer appear when supposed to be above the top

--- a/style.css
+++ b/style.css
@@ -37,19 +37,12 @@ input#searchRadiusInput {
 }
 .sfxBtn {
   width: 10%;
-  /* height: 10%; */
   z-index: 100;
   position: relative;
   bottom: 39%;
   left: 34%;
   text-align: center;
   color: #613f19;
-  /* border-radius: 10px;
-    border: 1px solid black;
-    background-color: white;
-    color: black;
-    font-size: 12px;
-    font-weight: bolder; */
 }
 /******** modal container styling *******/
 
@@ -69,16 +62,6 @@ input#searchRadiusInput {
   height: 100%;
   min-height: 500px;
 }
-
-/* #homeSplash {
-  z-index: 100;
-  background-color: pink;
-} */
-
-/* #homeImg > img {
-  width: 100%;
-  height: 100%;
-} */
 
 .recipeModalContainer {
   top: -250%;
@@ -150,14 +133,11 @@ input#searchRadiusInput {
 
 .homeContainer > :nth-child(2) {
   background: linear-gradient(140deg, #ffafbd, #c9ffbf);
-
   margin-top: 3vh;
   width: 90%;
   height: 10%;
 }
-/* #header{
-  display: block;
-} */
+
 .homeContainer > div > h1 {
   margin: auto auto;
   font-size: 6vmin;
@@ -167,16 +147,6 @@ input#searchRadiusInput {
 .homeContainer > div > img {
   margin-top: 10%;
   width: 50%;
-}
-
-.recipeNameFront,
-.recipeNameBack {
-  color: #58260e;
-  width: 95%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .recipeNameFront h2,
@@ -227,19 +197,20 @@ input#searchRadiusInput {
 }
 
 .recipeTextFront {
-  height: 52%;
+  height: 49%;
   margin: 10px;
 }
 
 .recipeTextBack {
-  height: 70%;
+  height: 80%;
+  margin: 10px;
 }
 
 .modalButton {
   position: absolute;
   bottom: 1%;
   width: 47%;
-  height: 12%;
+  height: 15%;
   font-size: 5vmin;
   border-radius: 25px;
   border: 3px solid;
@@ -329,7 +300,7 @@ input#searchRadiusInput {
 
 .placesList {
   width: 90%;
-  height: 40%;
+  height: 38%;
   overflow-x: hidden;
   overflow-y: scroll;
   margin-top: 1vh;
